# portal

./: Cargo.toml  README.md
shell/: install.sh  portal.sh
src/: cli.rs  main.rs  portals.rs
