[package]
name = "portal"
version = "0.1.0"
authors = ["shibe23 <shibe23.info@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
home = "0.5"
structopt = "0.3"
serde_json = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]
